// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiToast Props color danger is rendered 1`] = `
<div
  aria-live="polite"
  className="euiToast euiToast--danger"
>
  <EuiScreenReaderOnly>
    <p>
      A new notification appears
    </p>
  </EuiScreenReaderOnly>
  <div
    aria-label="Notification"
    className="euiToastHeader"
    data-test-subj="euiToastHeader"
  >
    <span
      className="euiToastHeader__title"
    />
  </div>
</div>
`;

exports[`EuiToast Props color primary is rendered 1`] = `
<div
  aria-live="polite"
  className="euiToast euiToast--primary"
>
  <EuiScreenReaderOnly>
    <p>
      A new notification appears
    </p>
  </EuiScreenReaderOnly>
  <div
    aria-label="Notification"
    className="euiToastHeader"
    data-test-subj="euiToastHeader"
  >
    <span
      className="euiToastHeader__title"
    />
  </div>
</div>
`;

exports[`EuiToast Props color success is rendered 1`] = `
<div
  aria-live="polite"
  className="euiToast euiToast--success"
>
  <EuiScreenReaderOnly>
    <p>
      A new notification appears
    </p>
  </EuiScreenReaderOnly>
  <div
    aria-label="Notification"
    className="euiToastHeader"
    data-test-subj="euiToastHeader"
  >
    <span
      className="euiToastHeader__title"
    />
  </div>
</div>
`;

exports[`EuiToast Props color warning is rendered 1`] = `
<div
  aria-live="polite"
  className="euiToast euiToast--warning"
>
  <EuiScreenReaderOnly>
    <p>
      A new notification appears
    </p>
  </EuiScreenReaderOnly>
  <div
    aria-label="Notification"
    className="euiToastHeader"
    data-test-subj="euiToastHeader"
  >
    <span
      className="euiToastHeader__title"
    />
  </div>
</div>
`;

exports[`EuiToast Props iconType is rendered 1`] = `
<div
  aria-live="polite"
  className="euiToast"
>
  <EuiScreenReaderOnly>
    <p>
      A new notification appears
    </p>
  </EuiScreenReaderOnly>
  <div
    aria-label="Notification"
    className="euiToastHeader"
    data-test-subj="euiToastHeader"
  >
    <EuiIcon
      aria-hidden="true"
      className="euiToastHeader__icon"
      size="m"
      type="user"
    />
    <span
      className="euiToastHeader__title"
    />
  </div>
</div>
`;

exports[`EuiToast Props title is rendered 1`] = `
<div
  aria-live="polite"
  className="euiToast"
>
  <EuiScreenReaderOnly>
    <p>
      A new notification appears
    </p>
  </EuiScreenReaderOnly>
  <div
    aria-label="Notification"
    className="euiToastHeader"
    data-test-subj="euiToastHeader"
  >
    <span
      className="euiToastHeader__title"
    >
      toast title
    </span>
  </div>
</div>
`;

exports[`EuiToast is rendered 1`] = `
<div
  aria-label="aria-label"
  aria-live="polite"
  class="euiToast testClass1 testClass2"
  data-test-subj="test subject string"
>
  <p
    class="euiScreenReaderOnly"
  >
    A new notification appears
  </p>
  <div
    aria-label="Notification"
    class="euiToastHeader euiToastHeader--withBody"
    data-test-subj="euiToastHeader"
  >
    <span
      class="euiToastHeader__title"
    />
  </div>
  <div
    class="euiText euiText--small euiToastBody"
  >
    <p>
      Hi
    </p>
  </div>
</div>
`;
